[integration-tests] Refactor. cosmetic changes in AnomalyResolutionTest